# kindr

./: CMakeLists.txt  package.xml
doc/doxygen/: CMakeLists.txt
include/kindr/quaternions/: Quaternion.hpp
test/: CMakeLists.txt  run_tests.py
