<?xml version="1.0"?>

<package format="3">

  <name>kindr</name>
  <version>2.3.11</version>
  <description>Kinematics and Dynamics for Robotics</description>

  <license>BSD</license>
  <url type="repository">https://github.com/anybotics/kindr</url>
  <maintainer email="andrea.ostuni@polito.it">Andrea Ostuni</maintainer>
  <maintainer email="rdiethelm@anybotics.com">Remo Diethelm</maintainer>
  <maintainer email="pleemann@anybotics.com">Philipp Leemann</maintainer>
  <author email="bloeschm@ethz.ch">Michael Bloesch</author>
  <author>Remo Diethelm</author>
  <author>Péter Fankhauser</author>
  <author>Paul Furgale</author>
  <author>Christian Gehring</author>
  <author>Hannes Sommer</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>eigen</depend>
  <doc_depend>doxygen</doc_depend>
  <doc_depend>texlive-latex-base</doc_depend>
  <test_depend>gtest</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
